tests: delete dvswitch during teardown
Sounds like we get an error if a host was already attached to deleted
dvswitch.

--- a/tests/integration/targets/prepare_vmware_tests/tasks/setup_dvswitch.yml
+++ b/tests/integration/targets/prepare_vmware_tests/tasks/setup_dvswitch.yml
@@ -17,4 +17,8 @@
       - vmnic1
     state: present
   with_items: "{{ esxi_hosts }}"
+  register: _result
+  until: _result is succeeded
+  retries: 10
+  delay: 1
   when: setup_attach_host is defined
