--- a/tests/integration/targets/vmware_vm_config_option/tasks/main.yml
+++ b/tests/integration/targets/vmware_vm_config_option/tasks/main.yml
@@ -58,6 +58,7 @@
       assert:
         that:
           - "'instance' in guest_ids_1"
+          - guest_ids_1.instance | length != 0
       when:
         - "'failed' in guest_ids_1"
         - not guest_ids_1.failed
@@ -74,7 +75,7 @@
             datacenter: "{{ dc1 }}"
             esxi_hostname: "{{ esxi_hosts[0] }}"
             get_guest_os_ids: true
-            hardware_version: "{{ config_option_keys_1['instance']['Supported hardware versions'][0] }}"
+            hardware_version: "{{ config_option_keys_1.instance.supported_hardware_versions[0] }}"
           register: guest_ids_2
           ignore_errors: true
 
@@ -84,12 +85,14 @@
           assert:
             that:
               - "'instance' in guest_ids_2"
+              - guest_ids_2.instance | length != 0
           when:
             - "'failed' in guest_ids_2"
             - not guest_ids_2.failed
       when:
         - "'instance' in config_option_keys_1"
-        - "'Supported hardware versions' in config_option_keys_1['instance']"
+        - "'supported_hardware_versions' in config_option_keys_1.instance"
+        - config_option_keys_1.instance.supported_hardware_versions | length != 0
 
     # Ignore errors due to there is known issue on vSphere 7.0.x
     # https://github.com/vmware/pyvmomi/issues/915
@@ -112,6 +115,43 @@
       assert:
         that:
           - "'instance' in recommended_configs"
+          - recommended_configs.instance | length != 0
       when:
         - "'failed' in recommended_configs"
         - not recommended_configs.failed
+
+    - name: get list of config option keys by connecting to ESXi host
+      community.vmware.vmware_vm_config_option:
+        validate_certs: false
+        hostname: "{{ esxi_hosts[0] }}"
+        username: "{{ esxi_user }}"
+        password: "{{ esxi_password }}"
+        esxi_hostname: "{{ esxi_hosts[0] }}"
+        get_hardware_versions: true
+      register: config_option_keys_3
+
+    - debug:
+        var: config_option_keys_3
+
+    - name: get list of supported guest IDs by connecting to ESXi host with config option key
+      community.vmware.vmware_vm_config_option:
+        validate_certs: false
+        hostname: "{{ esxi_hosts[0] }}"
+        username: "{{ esxi_user }}"
+        password: "{{ esxi_password }}"
+        esxi_hostname: "{{ esxi_hosts[0] }}"
+        get_guest_os_ids: true
+        hardware_version: "{{ config_option_keys_3.instance.supported_hardware_versions[2] }}"
+      register: guest_ids_3
+      ignore_errors: true
+
+    - debug:
+        var: guest_ids_3
+    - name: check guest ID list returned when task not failed
+      assert:
+        that:
+          - "'instance' in guest_ids_3"
+          - guest_ids_3.instance | length != 0
+      when:
+        - "'failed' in guest_ids_3"
+        - not guest_ids_3.failed
