--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -1114,3 +1114,26 @@ releases:
     - vmware_export_ovf.yml
     - vmware_guest-vbs.yml
     release_date: '2022-01-11'
+  2.1.0:
+    changes:
+      minor_changes:
+      - Remove `version_added` documentation that pre-dates the collection, that is
+        refers to Ansible < 2.10 (https://github.com/ansible-collections/community.vmware/pull/1215).
+      - vmware_guest_storage_policy - New parameter `controller_number` to support
+        multiple SCSI controllers (https://github.com/ansible-collections/community.vmware/issues/1203).
+      - vmware_object_role_permission - added VMware DV portgroup object_type for
+        setting permissions (https://github.com/ansible-collections/community.vmware/pull/1176)
+      - vmware_vm_config_option - Fix the parameter not correct issue when hostname
+        is set to ESXi host(https://github.com/ansible-collections/community.vmware/pull/1171).
+      - vmware_vm_info - adding fact about ``datastore_url`` to output (https://github.com/ansible-collections/community.vmware/pull/1143).
+    fragments:
+    - 1176-vmware_dv_portgroup.yml
+    - 1203-vmware_guest_storage_policy-controller_number-param.yml
+    - datastore_url-added-to-vm_info.yaml
+    - remove_pre-collection_version_added.yml
+    - vmware_vm_config_option.yml
+    modules:
+    - description: Manage users of ESXi
+      name: vmware_host_user_manager
+      namespace: ''
+    release_date: '2022-02-16'
