--- a/changelogs/fragments/fix_shutdownguest_state_idempotency.yml
+++ b/changelogs/fragments/fix_shutdownguest_state_idempotency.yml
@@ -1,2 +1,2 @@
 bugfixes:
-  - vmware_guest_powerstate - `shutdownguest` power state is not idempotent
+  - vmware_guest_powerstate - `shutdownguest` power state is not idempotent (https://github.com/ansible-collections/community.vmware/pull/1227).
