--- a/changelogs/fragments/1240-vmware_vmotion-add_cluster_storage_cluster.yaml
+++ b/changelogs/fragments/1240-vmware_vmotion-add_cluster_storage_cluster.yaml
@@ -1,3 +1,3 @@
-breaking_changes:
+minor_changes:
   - vmware_vmotion - Add the feature to use cluster and datastore cluster (storage pods) to define where the vmotion shold go.
     (https://github.com/ansible-collections/community.vmware/pull/1240)
