--- a/changelogs/fragments/add-sriov-advanced-options-to-vmware_guest_network.yml
+++ b/changelogs/fragments/add-sriov-advanced-options-to-vmware_guest_network.yml
@@ -1,4 +1,2 @@
-bugfixes:
-  - _get_nics_from_vm - acquire physical/virtual backing info and guest OS MTU status for diff generation
-  - _new_nic_spec - add advanced SR-IOV options from the VMware API (PCI dev PF/VF backing and guest OS MTU change)
-  - main - add support for the extra arguments
+minor_changes:
+  - vmware_guest_network - Add parameters `physical_function_backing`, `virtual_function_backing` and `allow_guest_os_mtu_change` (https://github.com/ansible-collections/community.vmware/pull/1218)
