--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -1151,3 +1151,30 @@ releases:
     - 1243-vmware-dvs-host-uplink-ordering.yml
     - fix_shutdownguest_state_idempotency.yml
     release_date: '2022-03-28'
+  2.3.0:
+    changes:
+      bugfixes:
+      - vmware_dvs_portgroup - Fix an idempotency issue when `num_ports` is unset
+        (https://github.com/ansible-collections/community.vmware/pull/1286).
+      - vmware_guest_powerstate - Ignore trailing `/` in `folder` parameter like other
+        guest modules do (https://github.com/ansible-collections/community.vmware/issues/1238).
+      - vmware_host_powerstate - Do not execute the powerstate changes in check_mode.
+        (https://github.com/ansible-collections/community.vmware/pull/1299).
+      - vmware_vmotion - Like already define in the examples, allow Storage vMotion
+        without defining a resource pool. (https://github.com/ansible-collections/community.vmware/pull/1236).
+      major_changes:
+      - Drop VCSIM as a test target (https://github.com/ansible-collections/community.vmware/pull/1294).
+      minor_changes:
+      - vmware_dvs_portgroup - Add the feature to configure ingress and egress traffinc
+        shaping and netflow on the dvs portgroup. (https://github.com/ansible-collections/community.vmware/pull/1224)
+      - vmware_guest_network - Add parameters `physical_function_backing`, `virtual_function_backing`
+        and `allow_guest_os_mtu_change` (https://github.com/ansible-collections/community.vmware/pull/1218)
+    fragments:
+    - 1224-vmware_dvs_portgroup-ingress_egress_traffic_shaping_and_netflow.yaml
+    - 1236-vmware_vmotion-svmotion_without_resourcepool.yml
+    - 1238-vmware_guest_powerstate-ignore_trailing_slash_in_folder.yml
+    - 1286-vmware_dvs_portgroup-fix_idempotency.yml
+    - 1294-remove_vcsim.yml
+    - 1299-vnware_host_powerstate-fix_check_mode.yml
+    - add-sriov-advanced-options-to-vmware_guest_network.yml
+    release_date: '2022-05-02'
