--- a/tests/integration/targets/vmware_vswitch_info/tasks/main.yml
+++ b/tests/integration/targets/vmware_vswitch_info/tasks/main.yml
@@ -37,3 +37,22 @@
 - assert:
     that:
       - switch_info_check_mode.hosts_vswitch_info is defined
+
+- name: Gather vswitch policies info about all hosts in given cluster
+  vmware_vswitch_info:
+    hostname: "{{ vcenter_hostname }}"
+    username: "{{ vcenter_username }}"
+    password: "{{ vcenter_password }}"
+    esxi_hostname: '{{ esxi1 }}'
+    validate_certs: false
+    policies: true
+  register: switch_policies_info
+
+- debug: var=switch_policies_info
+
+- assert:
+    that:
+      - switch_policies_info.hosts_vswitch_info is defined
+      - switch_policies_info.hosts_vswitch_info[esxi1].security is defined
+      - switch_policies_info.hosts_vswitch_info[esxi1].ts is defined
+      - switch_policies_info.hosts_vswitch_info[esxi1].lb is defined
