--- a/changelogs/fragments/1542-vmware_cluster_drs.yaml
+++ b/changelogs/fragments/1542-vmware_cluster_drs.yaml
@@ -1,2 +1,2 @@
 minor_changes:
-  - vmware_cluster_drs - Add predictive DRS Setting
+  - vmware_cluster_drs - Add predictive DRS Setting (https://github.com/ansible-collections/community.vmware/pull/1542).
