--- a/meta/runtime.yml
+++ b/meta/runtime.yml
@@ -8,17 +8,20 @@ action_groups:
   - vcenter_extension_info
   - vcenter_folder
   - vcenter_license
+  - vcenter_standard_key_provider
   - vmware_about_info
   - vmware_category
   - vmware_category_info
   - vmware_cfg_backup
   - vmware_cluster
+  - vmware_cluster_dpm
   - vmware_cluster_drs
   - vmware_cluster_ha
   - vmware_cluster_info
+  - vmware_cluster_vcls
   - vmware_cluster_vsan
-  - vmware_content_deploy_template
   - vmware_content_deploy_ovf_template
+  - vmware_content_deploy_template
   - vmware_content_library_info
   - vmware_content_library_manager
   - vmware_datacenter
@@ -60,7 +63,7 @@ action_groups:
   - vmware_guest_file_operation
   - vmware_guest_find
   - vmware_guest_info
-  - vmware_guest_instant_clone 
+  - vmware_guest_instant_clone
   - vmware_guest_move
   - vmware_guest_network
   - vmware_guest_powerstate
@@ -74,6 +77,7 @@ action_groups:
   - vmware_guest_tools_info
   - vmware_guest_tools_upgrade
   - vmware_guest_tools_wait
+  - vmware_guest_tpm
   - vmware_guest_vgpu
   - vmware_guest_video
   - vmware_guest_vnc
@@ -84,6 +88,7 @@ action_groups:
   - vmware_host_capability_info
   - vmware_host_config_info
   - vmware_host_config_manager
+  - vmware_host_custom_attributes
   - vmware_host_datastore
   - vmware_host_disk_info
   - vmware_host_dns
@@ -114,6 +119,7 @@ action_groups:
   - vmware_host_sriov
   - vmware_host_ssl_info
   - vmware_host_tcpip_stacks
+  - vmware_host_user_manager
   - vmware_host_vmhba_info
   - vmware_host_vmnic_info
   - vmware_local_role_info
@@ -139,16 +145,17 @@ action_groups:
   - vmware_vcenter_settings_info
   - vmware_vcenter_statistics
   - vmware_vc_infraprofile_info
+  - vmware_vm_config_option
   - vmware_vm_host_drs_rule
   - vmware_vm_info
+  - vmware_vmkernel
+  - vmware_vmkernel_info
+  - vmware_vmotion
   - vmware_vm_shell
   - vmware_vm_storage_policy
   - vmware_vm_storage_policy_info
   - vmware_vm_vm_drs_rule
   - vmware_vm_vss_dvs_migrate
-  - vmware_vmkernel
-  - vmware_vmkernel_info
-  - vmware_vmotion
   - vmware_vsan_cluster
   - vmware_vsan_health_info
   - vmware_vspan_session
