--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -1184,6 +1184,26 @@ releases:
     fragments:
     - 1578-vmware_tools-pyvmomi_8_0_0_1.yml
     release_date: '2023-01-20'
+  2.10.4:
+    changes:
+      bugfixes:
+      - scenario guides - Fix broken references (https://github.com/ansible-collections/community.vmware/issues/1610).
+      - various - Fix new pylint issues (https://github.com/ansible-collections/community.vmware/pull/1638).
+      - vmware_cluster_info - Fix pylint issues (https://github.com/ansible-collections/community.vmware/issues/1618).
+      - vmware_dvswitch - Fix pylint issues (https://github.com/ansible-collections/community.vmware/issues/1618).
+      - vmware_dvswitch_lacp - Fix pylint issues (https://github.com/ansible-collections/community.vmware/issues/1618).
+      - vmware_dvswitch_uplink_pg - Fix pylint issues (https://github.com/ansible-collections/community.vmware/issues/1618).
+      - vmware_guest_disk - Fix wrong key in the documentation of the return values
+        (https://github.com/ansible-collections/community.vmware/issues/1615)
+      - vmware_portgroup - Fix pylint issues (https://github.com/ansible-collections/community.vmware/issues/1618).
+      - vmware_vcenter_settings - Fix pylint issues (https://github.com/ansible-collections/community.vmware/issues/1618).
+      - vmware_vcenter_statistics - Fix pylint issues (https://github.com/ansible-collections/community.vmware/issues/1618).
+    fragments:
+    - 1610-scenario_guides.yml
+    - 1615-wrong_key_for_return_value.yml
+    - 1618_pylint.yml
+    - 1638-pylint-issues.yml
+    release_date: '2023-02-25'
   2.2.0:
     changes:
       bugfixes:
