--- a/changelogs/fragments/1660-false_instead_no_examples.yml
+++ b/changelogs/fragments/1660-false_instead_no_examples.yml
@@ -6,3 +6,4 @@ minor_changes:
   - vmware_guest_vgpu_info - Use false instead of no in examples (https://github.com/ansible-collections/community.vmware/issues/1660).
   - vmware_guest_vgpu - Use false instead of no in examples (https://github.com/ansible-collections/community.vmware/issues/1660).
   - vmware_host_datastore - Use false instead of no in examples (https://github.com/ansible-collections/community.vmware/issues/1660).
+  - vmware_recommended_datastore - Use false instead of no in examples (https://github.com/ansible-collections/community.vmware/issues/1660).
