--- a/tests/integration/targets/vmware_host_tcpip_stacks/tasks/pre.yml
+++ b/tests/integration/targets/vmware_host_tcpip_stacks/tasks/pre.yml
@@ -66,21 +66,19 @@
     that:
       - vmkernel_vmotion_result.changed is sameas true
 
-- name: Gather vmk info
-  vmware_vmkernel_info:
+- name: Gather host facts
+  vmware_host_facts:
     hostname: "{{ vcenter_hostname }}"
     username: "{{ vcenter_username }}"
     password: "{{ vcenter_password }}"
     validate_certs: false
     esxi_hostname: "{{ esxi_hosts[0] }}"
-  register: vmk0_info_result
+    schema: vsphere
+  register: gather_host_facts_result
 
-- name: set the variable of vmk0 ipaddr
+- name: set the variable of original gw
   set_fact:
-    vmk0_ipaddr: "{{ item.ipv4_address }}"
-  loop: "{{ vmk0_info_result.host_vmk_info[esxi_hosts[0]] }}"
-  when:
-    - item.device == "vmk0"
+    original_gw: "{{ gather_host_facts_result.ansible_facts.config.network.ipRouteConfig.defaultGateway }}"
 
 - name: set the variable for each vmk
   set_fact:
@@ -90,6 +88,6 @@
 - name: Make sure if defined the variables
   assert:
     that:
-      - vmk0_ipaddr is defined
+      - original_gw is defined
       - provisioning_vmk is defined
       - vmotion_vmk is defined
