--- a/tests/integration/targets/vmware_host_tcpip_stacks/tasks/pre.yml
+++ b/tests/integration/targets/vmware_host_tcpip_stacks/tasks/pre.yml
@@ -74,11 +74,28 @@
     validate_certs: false
     esxi_hostname: "{{ esxi_hosts[0] }}"
     schema: vsphere
-  register: gather_host_facts_result
+  register: gather_host_facts_from_vcenter_result
 
-- name: set the variable of original gw
+- name: Backup default stack
   set_fact:
-    original_gw: "{{ gather_host_facts_result.ansible_facts.config.network.ipRouteConfig.defaultGateway }}"
+    default_stack_backup: "{{ item }}"
+  loop: "{{ gather_host_facts_from_vcenter_result.ansible_facts.config.network.netStackInstance }}"
+  when:
+    - item.key == "defaultTcpipStack"
+
+- name: Backup provisioning stack
+  set_fact:
+    provisioning_stack_backup: "{{ item }}"
+  loop: "{{ gather_host_facts_from_vcenter_result.ansible_facts.config.network.netStackInstance }}"
+  when:
+    - item.key == "vSphereProvisioning"
+
+- name: Backup vmotion stack
+  set_fact:
+    vmotion_stack_backup: "{{ item }}"
+  loop: "{{ gather_host_facts_from_vcenter_result.ansible_facts.config.network.netStackInstance }}"
+  when:
+    - item.key == "vmotion"
 
 - name: set the variable for each vmk
   set_fact:
@@ -88,6 +105,8 @@
 - name: Make sure if defined the variables
   assert:
     that:
-      - original_gw is defined
+      - default_stack_backup is defined
+      - provisioning_stack_backup is defined
+      - vmotion_stack_backup is defined
       - provisioning_vmk is defined
       - vmotion_vmk is defined
