--- a/tests/integration/targets/prepare_vmware_tests/tasks/setup_datastore.yml
+++ b/tests/integration/targets/prepare_vmware_tests/tasks/setup_datastore.yml
@@ -13,6 +13,18 @@
     validate_certs: false
   with_items: "{{ esxi_hosts }}"
 
+- name: Gather host DNS info 1
+  vmware_host_dns_info:
+    cluster_name: '{{ ccr1 }}'
+    validate_certs: false
+  register: host_dns_info
+  ignore_errors: true
+
+- name: Debug host DNS info 1
+  debug:
+    var: host_dns_info
+  ignore_errors: true
+
 - name: Mount NFS (rw_datastore) datastores on the ESXi
   vmware_host_datastore:
     hostname: '{{ item }}'
@@ -26,6 +38,18 @@
     state: present
     validate_certs: false
   with_items: "{{ esxi_hosts }}"
+
+- name: Gather host DNS info 2
+  vmware_host_dns_info:
+    cluster_name: '{{ ccr1 }}'
+    validate_certs: false
+  register: host_dns_info
+  ignore_errors: true
+
+- name: Debug host DNS info 2
+  debug:
+    var: host_dns_info
+  ignore_errors: true
 
 - name: The vcenter needs a bit of time to refresh the DS list
   vmware_datastore_info:
