--- a/changelogs/fragments/1710_vmware_vm_info.yaml
+++ b/changelogs/fragments/1710_vmware_vm_info.yaml
@@ -1,2 +1,2 @@
 bugfixes:
-  - vmware_vm_info - Add missing show_folder parameter
+  - vmware_vm_info - Add missing show_folder parameter (https://github.com/ansible-collections/community.vmware/issues/1709).
